<resources>
    <string name="app_name">Prestamos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_client">Cliente</string>
    <string name="menu_lend">Prestamos</string>
    <string name="menu_collect">Pagos</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="btnSearch">Search</string>
    <string name="btnInsert">Insert</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSubmit">Submit</string>
    <string name="tvMessage" />

    <!--Key all Form-->
    <string name="tvDni">DNI</string>
    <string name="etDNI"></string>

    <!--Form Client-->
    <string name="tvNames">Nombres y Apellidos</string>
    <string name="etNames"></string>

    <!--Form Lend-->
    <string name="tvAmountLend">Monto Prestado</string>
    <string name="tvAmountCollectLend">Monto Pagado</string>


    <!--Form Collect-->
    <string name="tvAmountLendCollect">Monto Prestado</string>
    <string name="tvAmountCollect">Monto Pagado</string>




</resources>