<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.prestamos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_client"
        android:name="com.example.prestamos.ui.client.ClientFragment"
        android:label="@string/menu_client"
        tools:layout="@layout/fragment_client" />

    <fragment
        android:id="@+id/nav_lend"
        android:name="com.example.prestamos.ui.lend.LendFragment"
        android:label="@string/menu_lend"
        tools:layout="@layout/fragment_lend" />

    <fragment
        android:id="@+id/nav_collect"
        android:name="com.example.prestamos.ui.collect.CollectFragment"
        android:label="@string/menu_collect"
        tools:layout="@layout/fragment_collect" />

</navigation>